adds test for make a user

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
+    "mocha": "^3.5.0",
     "mongoose": "^4.11.5",
+    "protractor": "^5.1.2",
     "request": "^2.81.0"
   }
 }
